samples/_failures_safe/1761312413_b17dc9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9db6b0cb.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_9db6b0cb.c:195: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_9db6b0cb.c:194:9: error: expected declaration or statement at end of input
  194 |         for
      |         ^~~
./samples/SAFE/__tmp_9db6b0cb.c:194:9: error: expected declaration or statement at end of input
